Change name and updated example
Changed for weeks to week.

--- a/example/index.html
+++ b/example/index.html
@@ -12,12 +12,12 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="Stamford AB" />
-	<link rel="stylesheet" media="screen" type="text/css" href="static/weeks-0.1.0.css">
+	<link rel="stylesheet" media="screen" type="text/css" href="static/week-0.1.0.css">
 	<link rel="stylesheet" media="screen" type="text/css" href="static/style.css">
 </head>
 <body>
-	<div class="weeks"></div>
-	<script src="static/weeks-0.1.0.js"></script>
+	<div class="week"></div>
+	<script src="static/week-0.1.0.js"></script>
 	<script src="static/init.js"></script>
 </body>
 </html>
